--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <p id="kind">Service Worker Status</p>
     <div id="root"></div>
     <!--
       This HTML file is a template.
